refactor websocket events